--- a/CursorLockerTrayApp.csproj
+++ b/CursorLockerTrayApp.csproj
@@ -9,4 +9,12 @@
     <ApplicationIcon>trayicon.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="trayicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+
 </Project>
